<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Yellow"
    tools:context=".Fragmento">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center|center_horizontal"
            android:text="@string/Ask"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radiogroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="6dp"
                android:layout_height="68dp"
                android:layout_weight="1"
                android:buttonTint="@color/black"
                android:text="@string/Answer1"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="VisualLintButtonSize" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="6dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:buttonTint="@color/black"
                android:text="@string/Answer2"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="VisualLintButtonSize" />
        </RadioGroup>

    </LinearLayout>

</FrameLayout>